Features: Ajout de bouton New Game, Throw Dice et Hold

--- a/Home.html
+++ b/Home.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,100,300" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
     <title>Dice Game</title>
   </head>
  <body>
   <header></header>
+  <button id="NewGame">New Game</button>
+  <button id="ThrowDice">Throw dice</button>
+  <button id="Hold">Hold</button>
   <script src="Script.js"></script>
 </body>
 </html>
