Features: Ajout des scores GLOBAL des joueurs

--- a/Home.html
+++ b/Home.html
@@ -12,6 +12,14 @@
   <button id="NewGame">New Game</button>
   <button id="ThrowDice">Throw dice</button>
   <button id="Hold">Hold</button>
+  <section class="Player1">
+    <scan>Score:</scan>
+    <scan id="Player1Score">0</scan>
+  </section>
+  <section class="Player2">
+    <scan>Score:</scan>
+    <scan id="Player2Score">0</scan>
+  </section>
   <script src="Script.js"></script>
 </body>
 </html>
