Features: Ajout des fonctionalités de comptage de score, de sauvegarde de score et de passage d'un joueur à l'autre

--- a/Home.html
+++ b/Home.html
@@ -15,10 +15,14 @@
   <section class="Player1">
     <scan>Score:</scan>
     <scan id="Player1Score">0</scan>
+    <scan>Current:</scan>
+    <scan id="Player1Round">0</scan>
   </section>
   <section class="Player2">
     <scan>Score:</scan>
     <scan id="Player2Score">0</scan>
+    <scan>Current:</scan>
+    <scan id="Player2Round">0</scan>
   </section>
   <script src="Script.js"></script>
 </body>
