Features+Visuel:Ajout d'un indicateur pour le tour en cours et début de mise en page

--- a/Home.html
+++ b/Home.html
@@ -9,21 +9,33 @@
   </head>
  <body>
   <header></header>
+ 
+  <section class="Player1">
+    <div>
+    <scan>Player 1</scan>
+    <scan id="dot1" class="dot1"></scan>
+  </div>
+    <p>Score:</p>
+    <p id="Player1Score">0</p>
+    <p>Current:</p>
+    <p id="Player1Round">0</p>
+  </section>
+  <section>
   <button id="NewGame">New Game</button>
   <button id="ThrowDice">Throw dice</button>
   <button id="Hold">Hold</button>
-  <section class="Player1">
-    <scan>Score:</scan>
-    <scan id="Player1Score">0</scan>
-    <scan>Current:</scan>
-    <scan id="Player1Round">0</scan>
-  </section>
+</section>
   <section class="Player2">
-    <scan>Score:</scan>
-    <scan id="Player2Score">0</scan>
-    <scan>Current:</scan>
-    <scan id="Player2Round">0</scan>
+    <div>
+    <scan>Player 2</scan>
+    <scan id="dot2" class="dot2"></scan>
+  </div>
+    <p>Score:</p>
+    <p id="Player2Score">0</p>
+    <p>Current:</p>
+    <p id="Player2Round">0</p>
   </section>
+  
   <script src="Script.js"></script>
 </body>
 </html>
