--- a/Home.html
+++ b/Home.html
@@ -1,46 +1,49 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,100,300" rel="stylesheet">
-    <link rel="stylesheet" href="Style.css">
-    <title>Dice Game</title>
-  </head>
- <body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Style.css">
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+  <title>Dice Game</title>
+</head>
+
+<body>
   <header></header>
- <div>
-  <section class="Player1">
-    <div>
-    <scan>Player 1</scan>
-    <scan id="dot1" class="dot1"></scan>
+  <div>
+    <section class="Player1">
+      <div>
+        <scan>Player 1</scan>
+        <scan id="dot1" class="dot1"></scan>
+      </div>
+      <p id="Player1Score">0</p>
+      <div class="currentScore">
+        <p>Current:</p>
+        <p id="Player1Round">0</p>
+      </div>
+    </section>
+    <section class="control">
+      <button id="NewGame">NEW GAME</button>
+      <div class="dice">
+        <img id="dieImg" src="images/dice6.svg">
+      </div>
+      <button id="ThrowDice" onclick="Throw()">THROW DICE</button>
+      <button id="Hold">HOLD</button>
+    </section>
+    <section class="Player2">
+      <div>
+        <scan>Player 2</scan>
+        <scan id="dot2" class="dot2"></scan>
+      </div>
+      <p id="Player2Score">0</p>
+      <div class="currentScore">
+        <p>Current:</p>
+        <p id="Player2Round">0</p>
+      </div>
+    </section>
   </div>
-    <p id="Player1Score">0</p>
-    <div>
-    <p>Current:</p>
-    <p id="Player1Round">0</p>
-  </div>
-  </section>
-  <section class="control">
-  <button id="NewGame">NEW GAME</button>
-  <div class="dice">
-    <img src="img/dice-six-faces-six.svg">
-  </div>
-  <button id="ThrowDice">THROW DICE</button>
-  <button id="Hold">HOLD</button>
-</section>
-  <section class="Player2">
-    <div>
-    <scan>Player 2</scan>
-    <scan id="dot2" class="dot2"></scan>
-  </div>
-    <p id="Player2Score">0</p>
-    <div>
-    <p>Current:</p>
-    <p id="Player2Round">0</p>
-  </div>
-  </section>
-</div>
   <script src="Script.js"></script>
 </body>
+
 </html>
